--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Photo Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">My Projects</a>
                 </li>
 
                 <li class="nav-item">
@@ -80,7 +80,7 @@ ga('send', 'pageview');
                 </li>
 
                 <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://streetcatlove.github.io/photo/categories">Tags</a>
+                <a target="_blank" class="nav-link" href="https://streetcatlove.github.io/proj/categories">Tags</a>
                 </li>
 
                 {% include search-lunr.html %}
